[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/equipment_action_menu.gd" id="1_equipment_action_menu"]

[node name="EquipmentActionMenu" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 200.0
offset_bottom = 150.0
script = ExtResource("1_equipment_action_menu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CardNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Card Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EquipButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Equip"

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Discard"
